[project]
name = "cowrywise-backend-assessment"
version = "0.1.0"
description = "A library management system built using FastAPI for the Cowrywise Backend Engineer (Infrastructure, API Engineer, Devops) role."
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "pika>=1.3.2",
    "redis>=5.2.1",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
